--- a/d1s3-datengenerierung/d1s3-datengenerierung.html
+++ b/d1s3-datengenerierung/d1s3-datengenerierung.html
@@ -580,12 +580,14 @@ name: measurement
 # Clearview AI
 
 .pull-left-wide2[
+## Worum geht es?
+
 - Tool für Gesichtserkennung beliebiger Personen anhand von Trainingsdaten aus Social Media, Zeitungen, Online-Plattformen, PayPal Transaktionen, etc.
-- **Behauptung:** 99,85% Accuracy bei Stichprobe von 12 Millionen Fahndungsfotos [(s. Homepage)](www.clearview.ai)
+- **Behauptung:** 99,85% Accuracy bei Stichprobe von 12 Millionen Fahndungsfotos [(s. Homepage)](https://www.clearview.ai/clearview-2-0)
 - **Belege:** Gutes Testergebnis beim US Nationalen Institut für Standards und Technologie
 - **Anfechtbarkeit:** Tool ist weder offen zugänglich, noch können Nutzer/innen ihre Fotos entfernen.
 - **Training der Modelle:** Web Scraping von Online-Plattformen, Webseiten und Medien ohne Einverständnis der Nutzer/innen
-- Hintergrund: NYT-Recherche: Staatliche Behörden benutzen Clearview.ai auch während Gerichtsverfahren weiter [(Hill, 2020)](https://www.nytimes.com/2020/01/18/technology/clearview-privacy-facial-recognition.html)
+- **Hintergrund:** NYT-Recherche: Staatliche Behörden benutzen Clearview.ai auch während Gerichtsverfahren weiter [(Hill, 2020)](https://www.nytimes.com/2020/01/18/technology/clearview-privacy-facial-recognition.html)
 
 `Quelle` [Kashmir Hill, 2024](https://www.penguinrandomhouse.com/books/691288/your-face-belongs-to-us-by-kashmir-hill/)
 ]
@@ -686,47 +688,25 @@ name: measurement
 ---
 class: exercise, center, middle
 
-# Übung: Selektions- und Messprobleme in Ihren Daten?
+# Data Detective, Fall 1: Kriminelle Gesichter
 
 .content-box-white[
-**Diskussion in 2er-Gruppen, jeweils 3+3 Minuten**
-
-Zeigen Sie sich gegenseitig Ihr Datenposter und besprechen Sie, welche Selektions- oder Messprobleme in Ihren Daten auftreten könnten – und wie sich diese auf die Nutzung der Daten auswirken könnten!
-]
-
-
-
----
-name: f
-# Optum ImpactPro
-.pull-left[
-- Medizinisches Risiko vorhersagen mit früheren Patientendaten mit Optum ImpactPro
-- **Behauptung**: Vorhersage ermöglicht präventive Maßnahmen und Reduktion langfristiger Kosten 
-- **Belege**: keine Belege für Fairness oder Genauigkeit; ethnischer Bias [(s. Obermeyer, 2019)](https://doi.org/10. 1126/science.aax2342)
-- **Anfechtbarkeit:** Patienten können Ergebnisse und Trainingsdaten nicht herausfordern
-- **Training der Modelle**: Training anhand historischer Patientendaten, wodurch bestehende Bias erlernt wurden (z.B. schlechtere Gesundheitsversorgung für schwarze Menschen)
-
-`Source` [Optum, 2021; ](https://www.optum.com/content/dam/optum3/optum/en/resources/white-papers/wf4785959-impact-pro-white-paper.pdf)[Obermeyer, 2019; ](https://doi.org/10. 1126/science.aax2342) [Wang et al., 2023: S. 33](https://predictive- optimization.cs.princeton.edu/)
-]
-
-.pull-right[
 &lt;div align="center"&gt;
-&lt;img src="../pics/s-extra_F_OptumImpact.jpeg" width=1000&gt;
+&lt;img src="../pics/Fall_4_QR.png" width=350&gt;
 &lt;/div&gt;
-[Bildquelle](https://www.modernhealthcare.com/technology/optum-algorithm-used-flag-high-risk-patients-found-have-unintentional-racial-bias)
 ]
 
 
 ---
-# AI-Anwendungen und ihre Datenbasis
+class: exercise, center, middle
 
-| **AI-Tool/Anwendung**       | **Funktion**                                              | **(vermutete) Datenquellen**                                              |
-|----------------------------|-----------------------------------------------------------|--------------------------------------------------------------|
-| **Health Prediction**       | Vorhersage von Krankheitsverläufen, Prävention            | Elektronische Krankenakten, Genomdaten, Forschungsdaten         |
-| **Opinion Mining**          | Analyse und Extraktion von Meinungen aus Texten (z. B. Social Media) | Social-Media-Beiträge, Kundenrezensionen, Blogs                 |
-| **Übersetzungstools**       | Automatische Übersetzung von Texten und Sprache           | Trainingsdaten aus zweisprachigen Texten, Webseiten, Dokumenten |
-| **Medizinische Diagnostik** | KI-gestützte Analyse von Patienteninformationen, Bilddaten (z. B. Röntgenbilder) | Krankenakten, medizinische Bilder, Forschungsliteratur          |
-| **Autonomes Fahren**        | Selbststeuerung von Fahrzeugen unter realen Bedingungen    | Sensordaten (Kameras, Radar, Lidar), Verkehrsdaten, Karten      |
+# Data Detective, Fall 2: SARS-CoV-2-Abwassermonitoring
+
+.content-box-white[
+&lt;div align="center"&gt;
+&lt;img src="../pics/Fall_5_QR.png" width=350&gt;
+&lt;/div&gt;
+]
 
 
     </textarea>
