Slides day 2 update

--- a/d2s7-statistikverstehen/d2s7-statistikverstehen.html
+++ b/d2s7-statistikverstehen/d2s7-statistikverstehen.html
@@ -1050,6 +1050,33 @@ Entdecken Sie die Zukunft der Verwaltung mit OptiClassify – sparen Sie Zeit, K
 
 
 
+---
+class: exercise, center, middle
+
+# Data Detective, Fall 4: AnkER-Zentren
+
+.content-box-white[
+&lt;div align="center"&gt;
+&lt;img src="../pics/Fall_1_QR.png" width=350&gt;
+&lt;/div&gt;
+]
+
+
+
+---
+class: exercise, center, middle
+
+# Data Detective, Fall 4: AnkER-Zentren
+
+.content-box-white[
+&lt;div align="center"&gt;
+&lt;img src="../pics/Fall_3_QR.png" width=350&gt;
+&lt;/div&gt;
+]
+
+
+
+
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
